k8s/namespace.yaml
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "securecicd"
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
