k8s/networkpolicies.yaml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "default-deny"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: "securecicd"
  policyTypes:
    - "Ingress"
    - "Egress"
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "allow-dns"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: "securecicd"
  policyTypes:
    - "Egress"
  egress:
    -
      to:
        -
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
          podSelector:
            matchLabels:
              k8s-app: "kube-dns"
      ports:
        -
          protocol: "UDP"
          port: 53
        -
          protocol: "TCP"
          port: 53
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "frontend-ingress"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app: "frontend"
  policyTypes:
    - "Ingress"
  ingress:
    -
      ports:
        -
          protocol: "TCP"
          port: 8080
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "frontend-to-backend"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app: "frontend"
  policyTypes:
    - "Egress"
  egress:
    -
      to:
        -
          podSelector:
            matchLabels:
              app: "backend"
      ports:
        -
          protocol: "TCP"
          port: 8000
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "backend-from-frontend"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app: "backend"
  policyTypes:
    - "Ingress"
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              app: "frontend"
      ports:
        -
          protocol: "TCP"
          port: 8000
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "backend-to-redis"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app: "backend"
  policyTypes:
    - "Egress"
  egress:
    -
      to:
        -
          podSelector:
            matchLabels:
              app: "redis"
      ports:
        -
          protocol: "TCP"
          port: 6379
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "redis-from-backend"
  namespace: "securecicd"
spec:
  podSelector:
    matchLabels:
      app: "redis"
  policyTypes:
    - "Ingress"
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              app: "backend"
      ports:
        -
          protocol: "TCP"
          port: 6379
